<resources>
    <string name="app_name">Sano Jhola</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot">Forgot</string>
    <string name="Password">Password?</string>
    <string name="login">Login</string>
    <string name="log_in">Login!</string>
    <string name="sign_up">Sign up</string>
    <string name="signup">Sign Up!</string>
    <string name="or_sing_in_with">or Sign in with</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="back">Back</string>
    <string name="if_you_have_already_account">If you have already account?</string>
    <string name="login_your_account">Login your account</string>
    <string name="hello">Hello</string>
    <string name="thank_you">Thank you!</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sitaram_thing">Sitaram @2023</string>
    <string name="create_new_account">Create new Account</string>
    <string name="send_password">Send password</string>
    <string name="code_is_already_display_the_toast_message">code is already display the toast message</string>
    <string name="enter_your_email_and_set_a_new_password">Enter your email and set a new password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="otp_code">OTP code</string>
    <string name="email">Email</string>
</resources>