<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_singup_background"
    tools:context=".SingUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBackLeftArrow"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/hello"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/sign_up"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_view_of_fields"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:paddingStart="20sp"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck,TextFields" />

                <EditText
                    android:id="@+id/tvSignUpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_view_of_fields"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="20sp"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/tvSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_view_of_fields"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20sp"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="#52B3FF"
                    android:text="@string/sign_up"
                    android:textColor="#F3FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/if_you_have_already_account"
                        android:textColor="#575757"
                        android:textSize="15sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:text="@string/log_in"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold"
                        android:textColor="#0027FF"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="italic"
                    android:text="@string/thank_you"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>