<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2196F3"
    tools:context=".PasswordForgotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            app:cardCornerRadius="90dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/img_lock" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="Change your password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_UserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:background="@drawable/custom_view_of_fields"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editText_newPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:background="@drawable/custom_view_of_fields"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck,TextFields" />

            <EditText
                android:id="@+id/editText_confirmPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:background="@drawable/custom_view_of_fields"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:backgroundTint="#ABDAFF"
                android:text="@string/save"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:backgroundTint="#ABDAFF"
                android:text="@string/cancel"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>