<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_login_background"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/loginFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Welcome to Sano Jhola"
                        android:textColor="#ED000000"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="150dp"
                            android:text="@string/login"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry,TextContrastCheck" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_marginBottom="20dp"
                            android:background="@mipmap/ic_logo"
                            android:contentDescription="@null" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/tvLoginUsername"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:autofillHints=""
                        android:background="@drawable/custom_view_of_fields"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingStart="20sp"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />


                    <EditText
                        android:id="@+id/tvLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/custom_view_of_fields"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="20sp"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry,TextContrastCheck,SpeakableTextPresentCheck" />

                    <CheckBox
                        android:id="@+id/btnCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/remember_me"
                        android:textColor="#575757"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_shape"
                        android:backgroundTint="#52B3FF"
                        android:text="@string/login"
                        android:textColor="#F3FFFFFF"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot"
                        android:textAlignment="viewEnd"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/Password"
                        android:textAlignment="viewEnd"
                        android:textColor="#072CFD"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/or_sing_in_with"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        tools:ignore="TextContrastCheck" />

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp">

                        <Button
                            android:id="@+id/icGoogle"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@mipmap/ic_google"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <Button
                            android:id="@+id/icFacebook"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@mipmap/ic_facebook"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <Button
                            android:id="@+id/btnTwitter"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@mipmap/ic_twitter_logo"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </GridLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/if_you_don_t_have_an_account"
                        android:textAlignment="center"
                        android:textColor="#575757"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/signup"
                        android:textAlignment="center"
                        android:textColor="#082DFF"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</FrameLayout>